--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "semi": true,
     "singleQuote": false,
     "bracketSpacing": true,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "quoteProps": "preserve"
 }
